[gd_scene load_steps=5 format=3 uid="uid://bw4l7punxsaj0"]

[ext_resource type="Script" uid="uid://c7rt5dvlajcs3" path="res://scenes/ui/ability_upgrade_card.gd" id="1_8ur3e"]
[ext_resource type="FontFile" uid="uid://b8ux8vtu40l33" path="res://resources/theme/Kingdom - Pixel Font v1_3.ttf" id="2_c4j7u"]
[ext_resource type="FontFile" uid="uid://bwmrxu3day8yq" path="res://resources/theme/TinyUnicode.ttf" id="2_m44y0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4j7u"]
bg_color = Color(0.133196, 0.133196, 0.133196, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[node name="AbilityUpgradeCard" type="PanelContainer"]
light_mask = 0
custom_minimum_size = Vector2(120, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_c4j7u")
script = ExtResource("1_8ur3e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
light_mask = 0
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_c4j7u")
theme_override_font_sizes/font_size = 20
text = "Name here"
horizontal_alignment = 1

[node name="RarityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
light_mask = 0
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.593133, 0.593134, 0.593133, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -3
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_m44y0")
theme_override_font_sizes/font_size = 16
text = "Rarity"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
light_mask = 0
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -3
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_m44y0")
theme_override_font_sizes/font_size = 16
text = "Some large description is going over here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
light_mask = 0
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_m44y0")
theme_override_font_sizes/font_size = 16
text = "Select"
